--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ html{
 /*!------- HEADER --------*/
 
 h1{
+    display: flex;
     font-size: 45px;
     font-family: 'Poppins', sans-serif;
     font-weight: 900;
@@ -21,72 +22,118 @@ h1{
     padding: 10px;
     text-align: center;
     color: black;
+    align-items: center;
     
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    text-align: end;
+    align-items: end;
+    font-size: 50px;
+    font-family:'Poppins', sans-serif;
+    font-weight: 900;
+    margin-top: 18px;
 }
 
 header{
     display: flex;
     flex-direction: column;
-    background-color: #61357E;
+    background-color: #964BC7;
     flex-wrap: wrap;
     
     position: sticky;
     top:  0;
 }
 
-header nav div{
-    display: flex;
-    justify-content: space-between;
-    
-} 
-
-header nav ul li a{
-    text-decoration: none;
-    color:rgb(0, 0, 0);
-    padding: 7px;
-    border-radius: 8px;
-}
-
-header nav div ul li a:hover{
-    color: #ffffff;
-    
-}
-
-header nav div img{
-    width: 50px;
-}
-
-header nav ul{
-    list-style:none;
-    display: flex;
-    flex-direction: row;
-    
-}
 
 header nav ul li{
     margin: 20px;
 }
 
+.navbar{
+    background-color: #9e65c4b6;
+}
 
+.navbar-expand-xl div{
+    display: flex;
+    justify-content: end;
+}
+
+.navbar-expand-xl div h1{
+    
+}
+.navbar-expand-xl div a{
+    color:black;
+    font-size: 18px;
+}
+
+.navbar-expand-xl div a:hover{
+    color:white;
+    font-size: 18.5px;
+}
+
+.bi-airplane-engines{
+    font-size: 50px;
+    color:black;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 5px;
+    border-radius: 100%;
+    border: black 4px dashed;
+}
 
 /*!------- MAIN INDEX--------*/
+
+.button-2{
+    text-decoration: none;
+    border-radius: 5px;
+    border-color: #964BC7;
+    color: black;
+    margin: 10px;
+    padding: 10px;
+    background-color: #D9A9F9;
+    width: 200px;
+    text-align: center;
+    font-weight: 900;
+}
+
+.button-2:hover{
+    color:black;
+    text-decoration: underline;
+    background-color: #d9a9f9c9;
+}
 
 .button{
     text-decoration: none;
     border-radius: 5px;
-    border-color: #964BC7; ;
+    border-color: #ae7ece;
     border-style:outset;
     border-width: 10px;
     color: black;
     margin: 10px;
     padding: 10px;
     background-color: #D9A9F9;
+    font-weight: 900;
 }
 
 .button:hover{
-    background-color: black;
-    color: #964BC7;
-    border-color: black;
+    background-color:#b77ae1;
+    color: #000000;
+    border-color:#d097f6;
+}
+
+h2{
+    font-weight: 900;
+}
+
+h3{
+    font-weight: 900;
+}
+
+main{
+
 }
 
 .book{
@@ -95,7 +142,6 @@ header nav ul li{
     background-size: cover;
     background-attachment: fixed;
     padding: 50px;
-    
 }
 .book h2{
     text-align: center;
@@ -112,8 +158,9 @@ header nav ul li{
 }
 
 .book select{
-    color: rgb(0, 0, 0);
+    color: rgba(0, 0, 0, 0.586);
     background-color: #D9A9F9;
+    border:none;
     flex-direction: row;
     border-radius: 6px;
     height: 50px;
@@ -121,6 +168,14 @@ header nav ul li{
     border-width: 1px;
     display: flex;
     flex-wrap: wrap;
+    font-weight: 900;
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+}
+
+.book select:hover{
+    border: black 2px solid;
 }
 
 .book input{
@@ -131,10 +186,19 @@ header nav ul li{
     border-width: 1px;
     text-align: center;
     font-family: 'Poppins', sans-serif;
+    font-weight: 900;
+    color: rgba(0, 0, 0, 0.507);
     background-color: #D9A9F9;
+    border:none;
     display: flex;
     flex-wrap: wrap;
+    margin: 10px;
 }
+
+.book input:hover{
+    border: black 2px solid;
+}
+
 .book div label{
     margin: 10px;
 }
@@ -144,6 +208,11 @@ header nav ul li{
     justify-content: center;
 }
 
+.optional-services a:hover{
+    border: black 1px solid;
+    margin: 8.5px;
+}
+
 .optional-services a{
     display:inline-flex;
     justify-content: center;
@@ -151,13 +220,10 @@ header nav ul li{
     margin: 10px;
     padding: 10px;
     border-radius: 10px;
-    border-color: black;
-    border-width: 1px;
-    border-style: solid;
     color: rgb(0, 0, 0);
     text-decoration: solid;
-    background-color: #D9A9F9
-    ;
+    background-color: #D9A9F9;
+    font-weight: 900;
     
 }
 
@@ -229,6 +295,21 @@ header nav ul li{
     padding-bottom: 50px;
 }
 
+@media screen and (max-width: 1200px){
+    .book{
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+
+    .book h2{
+        align-self: center;
+    }
+
+}
+
+
 /* ------------ */
 
 
@@ -290,7 +371,11 @@ header nav ul li{
     border-color: black;
     border-style: inset;
     border-width: 10px;
-    background-color: aliceblue;
+    background-color: #f5f1f5;
+}
+
+label{
+    font-weight: 900;
 }
 
 .my-trips input{
@@ -300,6 +385,7 @@ header nav ul li{
     text-align: center;
     font-family: 'Poppins', sans-serif;
     background-color: #D9A9F9;
+    margin-bottom: 10px;
 }
 .my-trips div p{
     text-align: center;
@@ -316,6 +402,7 @@ header nav ul li{
 
 /* CONTACT US PAGE */
 
+
 .contact-us img{
     width: 100px;
 
@@ -325,6 +412,101 @@ header nav ul li{
     width: 100px;
 }
 
+.contact-us{
+    margin: 20px;
+    display: flex;
+    text-align:center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contact-us h2{
+    margin-bottom: 10px;
+}
+
+.contact-us a i{
+    font-size: 80px;
+    color:black;
+}
+
+.contact-means{
+    display: flex;
+    justify-content: center;
+    
+}
+
+.border-line{
+    display: flex;
+    justify-content: center;
+
+}
+
+.border-line div{
+
+    width: 50%;
+    border-top: 0.05px solid #00000043;
+    margin: 30px;
+    
+}
+.contact-means div{
+    justify-content: center;
+    align-items:center ;
+    flex-direction: column;
+    text-align: center;
+    margin: 30px;
+    width: 20%;
+}
+
+.contact-means div a{
+    text-decoration: none;
+    color:#964BC7;
+}
+
+.contact-means div a:hover{
+    text-decoration: underline;
+}
+
+.contact-means div p{
+    margin: 20px;
+}
+
+.contact-means div i{
+    font-size: 40px;
+}
+
+.contact-us-ask{
+    display: flex;
+    flex-direction:column ;
+    text-align: start;
+    align-items: center;
+    
+}
+
+.contact-us-ask ul{
+    width: 45%;
+}
+.contact-us-ask ul li{
+    background-color: #d097f6;
+    margin: 20px;
+    padding: 10px;
+    list-style: none;
+    border-radius: 10px;
+    
+}
+
+.contact-us-ask ul li a{
+    text-decoration: none;
+    text-indent: 20px;
+    color: #000000;
+}
+
+.contact-us-ask ul li a:hover{
+    text-decoration: underline;
+}
+
+.contact-us-ask ul li:hover{
+    background-color: #d097f69f;
+}
 /* HELP CENTER PAGE */
 
 .help-center{
@@ -398,6 +580,7 @@ header nav ul li{
     background-color: #D9A9F9;
     margin: 15px;
     border: black 2px solid;
+    border-radius: 10px;
     text-decoration: none;
     color: black;
     padding-bottom: 10px;
@@ -405,25 +588,183 @@ header nav ul li{
 
 .grid-container div a:hover{
     text-decoration: underline;
+    background-color: #d9a9f9be;
 }
 
 .grid-container div a i:hover{
-    color: black;
+    color:#ffffff97;
     font-size: 51px;
     
 }
 
+/* FLIGHT STATUS */
+
+.main-status{
+    display: flex;
+    justify-content: center;
+    background-image: url(../img/nube-blanca-sobre-fondo-cielo-azul\ \(1\).jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.flight-status{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 40px;
+    padding: 30px;
+    flex-wrap: wrap;
+    border: black 4px solid;
+    width: 50%;
+    align-items:center ;
+    background-color: white;
+
+}
+
+.flight-status div{
+    margin: 20px;
+}
+.flight-status div input{
+    margin-left: 20px;
+    background-color: #D9A9F9;
+    border:none;
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.476);
+    font-weight: 900;
+    border-radius: 7px;
+    
+}
+
+.flight-status div input:hover{
+    border: black 3px solid;
+}
+
+.flight-status a{
+    display:inline ;
+}
+
+/* MEDIA QUERY - HELP CENTER */
+@media screen and (max-width: 946px){
+    .search-bar input{
+        width: 500px;
+        height: 50px;
+        margin: 10px;
+        text-indent: 10px;
+        text-align: center;
+    }
+    .grid-container{
+            display: grid;
+            grid-template-rows: 1fr 1fr;
+            grid-template-columns: 250px 250px 250px;
+            text-align: center;
+    }   
+}
+
+@media screen and (max-width: 768px){
+    .grid-container{
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+        text-align: center;
+    }
+    .grid-container div a{
+        display: flex;
+        flex-direction: column;
+        background-color: #D9A9F9;
+        margin: 15px;
+        border: black 2px solid;
+        border-radius: 10px;
+        text-decoration: none;
+        color: black;
+        padding: 10px;
+    }
+    .help-center{
+        display:flex ;
+        flex-direction: column  ;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin: 20px;
+    }
+    
+    .help-center h2{
+        margin: 10px;
+        display: inline-block;
+    }
+
+    .topics{
+        border-top: black 1px solid;
+        padding: 20px;
+    }
+    
+    .search-bar{
+        padding: 15px;
+        background-color: #270db961;
+        
+    }
+    
+    .search-bar input{
+        width: 500px;
+        height: 50px;
+        margin: 10px;
+        text-indent: 10px;
+        text-align: center;
+        
+    }   
+    
+    
+    .questions{
+        display: flex;
+        flex-direction: column;
+        margin-top: 20px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .questions a{
+        text-decoration: none;
+        color:#534bc7;
+        font-weight: 900;
+        font-size: 20px;
+    }
+    
+    .questions a:hover{
+        font-size: 16.075px;
+        text-decoration: underline;
+    
+    }
+    
+    .questions ul{
+        list-style: none;
+
+    }
+
+    .questions ul li{
+        margin: 20px;
+        background-color: #d097f6;
+        padding: 10px;
+        border-radius: 10px;
+    }
+    }
+
+
 /*!------- FOOTER --------*/
 
 footer{
-    background-color: #5C2F7A;
+    background-color: #9046c1;
     padding: 20px;
     display: flex;
     justify-content: space-between;
+
 }
 
 footer h3{
-    color: black;
+    color: rgb(0, 0, 0);
 }
 
 .footer-list{
@@ -440,15 +781,46 @@ footer h3{
     margin-bottom: 5px;
 }
 .footer-list ul li a{
-    color: black;
+    color: rgb(0, 0, 0);
     text-decoration: none;
+}
+
+.footer-list ul li a:hover{
+    text-decoration: underline;
+    color: white;
+    
 }
 
 .footer-img{
     display:flex;
     align-items: center;
+    
+}
+
+.footer-img i{
+    color: rgb(0, 0, 0);
+    margin-right: 10px;
+    font-size: 40px;
 }
 
 .footer-img a img{
     margin-right: 10px;
+}
+
+@media screen and (max-width: 1200px){
+
+    footer{
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        
+    }
+
+    .footer-img{
+        flex-direction: column;
+        justify-content: start;
+    }
+    .footer-img i{
+        margin-left: 10px;
+    }
 }
