--- a/css/style.css
+++ b/css/style.css
@@ -243,14 +243,13 @@ main{
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     color: rgb(0, 0, 0);
-    background-color:rgb(255, 255, 255);
-    border: 2px black;
-    border-style: solid;
+    background-color:#D9A9F9;
     flex-wrap: wrap;
-    width: 350px;
-    
-    
-    
+    width: 450px;
+}
+
+.bundles div:hover{
+    border: rgb(0, 0, 0) 0.5px solid;
 }
 
 .bundles div p{
@@ -260,7 +259,6 @@ main{
 .bundles div a img{
     width: 100%;
     height: 300px;
-    border-color: black;
     margin-bottom: 10px;
 }
 
@@ -273,26 +271,37 @@ main{
     ;
 }
 
-.loyalty{
+.bags{
+    display: flex;
+    text-align:center;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    ;
+}
+
+.bags-1{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
     width: 75%;
-    border: 2px black;
-    border-style: solid;
+    margin: 25px;
+    background-color:#D9A9F9;
+    border-radius: 20px;
+    padding: 20px;
 }
 
-.loyalty a img{
-    box-sizing:border-box;
+.bags-1:hover{
+    border: black 0.05px solid;
 }
-.loyalty div{
+
+.bags-1 div{
     
     text-align: center;
 }
 
-.loyalty div h2{
-    padding-bottom: 50px;
+.bags-1 div h2{
+margin: 20px;
 }
 
 @media screen and (max-width: 1200px){
@@ -308,43 +317,24 @@ main{
     }
 
 }
+.carousel-index{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
 
+.imgs{
+    width: 500px;
+    border-radius: 40px;
+    margin-bottom: 20px;
+
+}
 
 /* ------------ */
 
 
-.bags{
-    display: flex;
-    text-align:center;
-    align-items: center;
-    flex-direction: row;
-    justify-content: center;
-    ;
-}
 
-.bags-1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row-reverse;
-    width: 75%;
-    border: 2px black;
-    border-style: solid;
-    margin: 25px;
-}
-
-.bags-1 img{
-    width: 300px;
-    height: 300px;
-}
-.bags-1 div{
-    
-    text-align: center;
-}
-
-.bags-1 div h2{
-    padding-bottom: 50px;
-}
 
 /* MY TRIPS PAGE */
 
@@ -398,6 +388,10 @@ label{
 
 .my-trips div a{
     margin-top: 30px;
+}
+
+.bundles{
+    flex-wrap: wrap;
 }
 
 /* CONTACT US PAGE */
