--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ h1{
     
 }
 
-.title {
+.container-fluid p {
     display: flex;
     flex-direction: column;
     text-align: end;
@@ -35,6 +35,13 @@ h1{
     font-family:'Poppins', sans-serif;
     font-weight: 900;
     margin-top: 18px;
+    display: block;
+}
+
+@media screen and (max-width: 544px){
+    .container-fluid p{
+        display: none;
+    }
 }
 
 header{
@@ -50,6 +57,10 @@ header{
 
 header nav ul li{
     margin: 20px;
+}
+
+.title{
+    display: block;
 }
 
 .navbar{
@@ -80,6 +91,8 @@ header nav ul li{
     border-radius: 100%;
     border: black 4px dashed;
 }
+
+
 
 /*!------- MAIN INDEX--------*/
 
@@ -323,7 +336,21 @@ margin: 20px;
         align-self: center;
     }
 
+    @media screen and (max-width: 544px){
+        .book div select{
+            height: 50px;
+            width: 300px;
+        }
+    }
 }
+
+@media screen and (max-width: 420px){
+    .book div select{
+        height: 50px;
+        width: 200px;
+    }
+}
+
 .carousel-index{
     display: flex;
     align-items: center;
@@ -331,8 +358,13 @@ margin: 20px;
     
 }
 
+.carousel{
+    display: flex;
+    align-items: center;
+}
+
 .imgs{
-    width: 500px;
+    width: 300px;
     border-radius: 40px;
     margin-bottom: 20px;
 
@@ -687,7 +719,6 @@ label{
 }
 
 
-
 @media screen and (max-width: 768px){
     .grid-container{
         display: grid;
@@ -784,8 +815,38 @@ label{
             text-align: center;
         }  
     }
+    
+    
+@media screen and (max-width: 544px){
+    .grid-container{
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        text-align: center;
     }
+}
 
+@media screen and (max-width: 500px){
+
+    .search-bar input{
+        width: 200px;
+        height: 50px;
+        margin: 10px;
+        text-indent: 10px;
+        text-align: center;
+        margin-bottom: 20px;
+    }  
+}
+}
+
+@media screen and (max-width: 500px){
+    .grid-container{
+        display: grid;
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr ;
+        text-align: center;
+    }
+}
 
 /* FLIGHT STATUS */
 
@@ -866,7 +927,7 @@ label{
 
 footer{
     background-color: #9046c1;
-    padding: 20px;
+
     display: flex;
     justify-content: space-between;
 
@@ -883,7 +944,7 @@ footer h3{
 
 .footer-list ul{
     list-style: none;
-    margin-right: 15px;
+
 }
 
 .footer-list ul li{
@@ -910,6 +971,7 @@ footer h3{
     color: rgb(0, 0, 0);
     margin-right: 10px;
     font-size: 40px;
+    display: block;
 }
 
 .footer-img a img{
@@ -931,5 +993,11 @@ footer h3{
     }
     .footer-img i{
         margin-left: 10px;
+    }
+}
+
+@media screen and (max-width: 440px){
+    .footer-img i{
+        display: none;
     }
 }
