--- a/css/style.css
+++ b/css/style.css
@@ -13,20 +13,7 @@ html{
 }
 /*!------- HEADER --------*/
 
-h1{
-    display: flex;
-    font-size: 45px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 900;
-    font-style: italic;
-    padding: 10px;
-    text-align: center;
-    color: black;
-    align-items: center;
-    
-}
-
-.container-fluid p {
+.title{
     display: flex;
     flex-direction: column;
     text-align: end;
@@ -49,7 +36,6 @@ header{
     flex-direction: column;
     background-color: #964BC7;
     flex-wrap: wrap;
-    
     position: sticky;
     top:  0;
 }
@@ -59,9 +45,7 @@ header nav ul li{
     margin: 20px;
 }
 
-.title{
-    display: block;
-}
+
 
 .navbar{
     background-color: #9e65c4b6;
@@ -222,7 +206,6 @@ h3{
 .optional-services{
     display:flex;
     justify-content: center;
-    
 }
 
 .optional-services a:hover{
@@ -241,8 +224,8 @@ h3{
     text-decoration: solid;
     background-color: #D9A9F9;
     font-weight: 900;
-    box-shadow: 10px 10px 31px -8px rgba(0, 0, 0.75);
-    -webkit-box-shadow: 10px 10px 31px -8px rgba(0, 0, 0.75);
+    box-shadow: 10px 10px 31px -8px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 10px 10px 31px -8px rgba(0, 0, 0, 0.75);
 }
 
 .bundles {
@@ -250,7 +233,6 @@ h3{
     justify-content: center;
     align-items: center;
     text-align: center;
-    
 }
 
 .bundles div{
@@ -367,7 +349,6 @@ margin: 20px;
     width: 300px;
     border-radius: 40px;
     margin-bottom: 20px;
-
 }
 
 /* ------------ */
@@ -871,7 +852,6 @@ label{
     width: 40%;
     align-items:center ;
     background-color: white;
-
 }
 
 .flight-status div{
